  Multiple vaults would result in your house being rejected by the server, but
  multiple wives or kids would end up being accepted by the server. (thanks 
  Joshua Collins and Ben Foster).





Version 23   Live Server Fixes

--Changed server to forbid house check-in after edit with illegal family
  configuration (multiple wives, missing family members, etc.).





Version 23     2013-November-1

--Fixed lingering, unnoticed bug in power propagation when a power source is
  placed right above a voltaged-triggered switch (thanks Largestherb).

--Increased gun reach from 2 to 3 to prevent unkillable wife configuration
  (thanks Joshua Collins).





Version 22     2013-October-31

--Fixed closed doors blocking visibility of an animal that starts there (after
  either being drugged or killed).  Now animal presense under a door causes a
  door to be open from the start.

--Lights and sticking switches are now breakable with a crowbar, and lights are
  now breakable with brick and club.  This makes crowbar consistently useful
  for prying and hitting, but club and brick only useful for hitting.

--Fixed bug in family jump-back when walkable house area is extremly tight
  (thanks Joshua Collins).

--Changed protocol to hide user_id of other player's houses (so that player
  identity cannot be tracked across multiple lives).

--Added a warning about idle timeout death during robbery (thanks Awesomebill).

--Added a forced-ignore timer that is triggered after you successfully rob a
  house and the owner of that house dies (blocking you from seeing their
  next-life houses until the timer expires).  This slows repeated farming
  of a second account for starting money and eliminates the need for a fresh
  house delay-before-listing period (now a fresh house is listed as soon as the
  owner steps out the door).

--Back to only dumping remaining tools in a house when you die there (to make
  tool passing between accounts more difficult).
